--- a/whatsapp-data-analysis.ipynb
+++ b/whatsapp-data-analysis.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# A Comprehensive Data Analysis on a WhatsApp Group Chat\n",
-    "##### *Author*: [Tushar Nankani](https://www.linkedin.com/in/tusharnankani/)"
+    "##### *Author*: [Bhagat Singh Chauhan]"
    ]
   },
   {
