--- a/whatsapp-data-analysis.ipynb
+++ b/whatsapp-data-analysis.ipynb
@@ -2181,7 +2181,7 @@
    "metadata": {},
    "source": [
     "# *Thank You*\n",
-    "- [Tushar Nankani](https://www.linkedin.com/in/tusharnankani/)"
+    "- [Bhagat Singh Chauhan]"
    ]
   }
  ],
